Create logger class